Had a bug with asset missing at 360

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -442,6 +442,8 @@ flutter:
     - assets/Windcompass/357.svg
     - assets/Windcompass/358.svg
     - assets/Windcompass/359.svg
+    - assets/Windcompass/360.svg
+
 
     - assets/UV/0.svg
     - assets/UV/1.svg
