--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,17 @@ dependencies:
   flutter_svg: ^2.0.6
   flutter_riverpod: ^2.3.6
   file: ^6.1.4
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
   
+  flutter_launcher_icons: "^0.13.1"
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -78,6 +83,8 @@ flutter:
     - assets/images/Snow.svg
     - assets/images/Sunny.svg
     - assets/images/Thunderstorm.svg
+
+    - assets/icon.png
 
     - assets/AirQuality/1.svg
     - assets/AirQuality/2.svg
