Added feature for high refresh rate

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^2.0.6
   flutter_riverpod: ^2.3.6
   file: ^6.1.4
+  flutter_displaymode: ^0.6.0
   
 dev_dependencies:
   flutter_test:
